# esp32-pumpkin

./: CLAUDE.md  README.md
main/: CMakeLists.txt  Kconfig.projbuild  config.h  esp32pumpkin.c  esp32pumpkin.saveme  neopixel.c  neopixel.h
main/audio/: audio_manager.c  audio_manager.h
main/leds/: led_controller.c  led_controller.h
main/sensors/: pir_sensor.c  pir_sensor.h
